Resolve Sonar issues in hardening PR